# elementary-wingpanel-DDC-controller

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  install.sh  meson.build  uninstall.sh
data/: ddcbrightness.desktop  meson.build
po/: meson.build
src/: Indicator.vala  meson.build
src/Services/: DDCService.vala  Display.vala
src/Widgets/: DisplayBrightness.vala  DisplayWidget.vala  PopoverWidget.vala
